--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ header nav {
 }
 
 #jumbo {
-    height: 700px;
-    background-color: darkgreen;
+    height: 650px;
+    background-image: url(../img/jumbo-bg.png);
+    background-position: center top;
+    color: white;
 }
