--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.white {
+    color: white;
+}
+
 #black-sony {
     height: 35px;
     background-color: black;
@@ -26,9 +30,13 @@ img {
 }
 
 .white-spaced {
-    padding: 4% 0;
+    padding: 5% 0 4%;
 }
 
 #ps5-thumbs img {
     width: 70%;
+}
+
+#new {
+    padding: 3% 0 6%;
 }
