--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,36 @@
+/* commons */
 .white {
     color: white;
+}
+
+.button {
+    padding: 6px 15px 8px;
+}
+
+/* barra navigazione */
+#nav_bar {
+    background-color: white;
+}
+
+#nav_bar a {
+    color: black;
+}
+
+.chevron {
+    width: 10px;
+}
+
+nav li {
+    margin-right: 15px;
+}
+
+nav .button {
+    background-color: #363636;
+    color: white;
+}
+
+#search {
+    width: 25px;
 }
 
 .subtitle {
@@ -15,10 +46,10 @@
     background-color: black;
 }
 
-header nav {
-    height: 65px;
-    background-color: lightblue;
+#black-sony img {
+    height: 40%;
 }
+
 
 .game {
     height: 650px;
@@ -33,7 +64,7 @@ header nav {
     background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
 }
 
-img {
+section img, nav img{
     width: 100%;
 }
 
@@ -89,5 +120,12 @@ footer ul li {
 @media screen and (min-width: 992px) {
     #follow .col-md-2 {
     max-width: 136px;
+    }
+}
+
+@media screen and (max-width: 1100px){
+
+    nav li .chevron {
+        display: none;
     }
 }
