--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,20 @@ nav .button {
 
 .game .button {
     background-color: #CD3D0F;
-    margin: 30px 0 60px;
+    margin: 2px;
 }
+
+.game .border_button {
+    margin: 30px 0 60px;
+    width: max-content;
+    height: max-content;
+    border: 2px solid transparent;
+}
+
+.game .border_button:hover {
+    border: 2px solid #CD3D0F;
+}
+
 
 #takes-two {
     background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
