--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,18 @@
     display: inline-block;
 }
 
+.subtitle {
+    color: grey;
+}
+
+.spaced {
+    padding: 5% 0 4%;
+}
+
+section img, nav img{
+    width: 100%;
+}
+
 a, a:hover, a:active {
     text-decoration: none;
     color: inherit;
@@ -48,21 +60,19 @@ nav .button {
     width: 25px;
 }
 
-.subtitle {
-    color: grey;
-}
-
-.spaced {
-    padding: 5% 0 4%;
-}
-
+/* games */
 .game {
     height: 650px;
     background-position: center top;
     color: white;
 }
+
 #revival {
     background-image: url(../img/jumbo-bg.png);
+}
+
+#takes-two {
+    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
 }
 
 .game .button {
@@ -81,13 +91,19 @@ nav .button {
     border: 2px solid #CD3D0F;
 }
 
-
-#takes-two {
-    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
+/* games thumbnails */
+#games-thumbs {
+    margin: 30px 0;
 }
 
-section img, nav img{
-    width: 100%;
+#games-thumbs img {
+    border-radius: 20px;
+    transition: transform 0.2s ease-out;
+}
+
+#games-thumbs img:hover {
+    transform: translateY(-8px);
+    box-shadow: 0 10px 10px rgb(160, 159, 159);
 }
 
 #ps5-thumbs img {
