--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 .blue {
-    color: #0070D1;
+    color: #2D64E6;
     font-size: 15px;
     font-weight: 500;
 }
@@ -14,7 +14,7 @@
 }
 
 .blue_btn {
-    background-color: #0070D1;
+    background-color: #2D64E6;
     color: white;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .blue_border:hover {
-    border: 2px solid #0070D1;
+    border: 2px solid #2D64E6;
 }
 
 .button {
@@ -40,12 +40,11 @@
 
 .big {
     font-size: 20px;
-    margin-top: 30px;
+    line-height: 1.3;
 }
 
 .medium {
     font-size: 19px;
-    margin-top: 30px;
 }
 
 .small {
@@ -69,6 +68,10 @@ a, a:hover, a:active {
 
 h2 {
     font-size: 40px;
+}
+
+h3 {
+    font-size: 35px;
 }
 
 /* barra navigazione */
@@ -150,7 +153,7 @@ nav .button {
 .border_thumb {
     padding: 2px;
     border-radius: 22px;
-    border: 2px solid #0070D1;
+    border: 2px solid #2D64E6;
 }
 
 .border_thumb:hover {
@@ -172,7 +175,7 @@ nav .button {
 }
 
 #ps5 .selected {
-    border-bottom: 2px solid #0070D1;
+    border-bottom: 2px solid #2D64E6;
 }
 
 #ps5-thumbs .small {
@@ -181,6 +184,12 @@ nav .button {
 
 #ps5-thumbs >*:hover .subtitle.small{
     color: black;
+}
+
+#ps5 .subtitle.big, 
+#ps5 .subtitle.medium,
+#ps4 .subtitle.big {
+    margin-top: 30px;
 }
 
 /* nuove uscite */
@@ -192,6 +201,11 @@ nav .button {
 #new img {
     border-radius: 20px;
     margin-bottom: 5px;
+}
+
+/* PS4 */
+#ps4 .subtitle.medium {
+    margin-top: 20px;
 }
 
 #psplus {
