--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
 /* commons */
-.container {
-    max-width:  95%;
-}
-
 .white {
     color: white;
 }
@@ -85,6 +81,7 @@
 .dark_btn:hover {
     background-color: #555555;
 }
+
 .dark_border:hover {
     border: 2px solid #555555;
 }
@@ -148,22 +145,40 @@ h3 {
 
 #nav_bar {
     background-color: white;
+    
 }
 
 #nav_bar a {
     color: black;
 }
 
+#nav_bar a:hover {
+    color: #0070d1;
+}
+
+#nav_bar .nav-item:hover > a{
+    color: #0070d1;
+}
+
 .chevron {
     width: 10px;
 }
 
-nav li {
-    margin-right: 15px;
+.nav-item:hover .hide-hov {
+    display: none;
 }
 
-.fit-cont {
-    width: fit-content;
+.show-hov {
+    display: none;
+    transform: rotate(180deg);
+}
+
+.nav-item:hover .show-hov {
+    display: inline-block;
+}
+
+nav li {
+    margin-right: 15px;
 }
 
 #search {
@@ -174,11 +189,17 @@ nav li {
     filter: invert(27%) sepia(88%) saturate(1944%) hue-rotate(192deg) brightness(92%) contrast(101%);
 }
 
-.drops {
+.dropdown {
+    position: static;
+}
+
+.dropdown-toggle::after {
     display: none;
+}
+
+.dropdown-menu[data-bs-popper] {
     width: 100%;
-    background-color: #fff;
-    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.3);
+    border: none;
 }
 
 .drop-item img {
@@ -189,7 +210,7 @@ nav li {
 .drop-item {
     border-radius: 5px;
     margin: 0 2px;
-    padding: 1% 4% 2%;
+    padding: 1% 3%;
     display: inline-block;
 }
 
@@ -197,44 +218,17 @@ nav li {
     text-align: center;
 }
 
-.nav-item:hover .drops {
-    display: block;
-}
-
 .drop-item:hover {
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);
 }
 
-.nav-item:hover .hide-hov {
-    display: none;
-}
-
-.show-hov {
-    display: none;
-}
-
-.nav-item:hover .show-hov {
-    display: inline-block;
-}
-
-#nav_bar .nav-item:hover a{
-    color: #0070d1;
-}
-
 .drop-bottom {
     border-top: 1px solid lightgrey;
-}
-
-.drop-bottom ul {
-    list-style-type: circle;
+    border-bottom: 1px solid lightgrey;
 }
 
 .drop-bottom li {
     display: inline;
-}
-
-.drop-bottom li:hover {
-    color: #0070d1;
 }
 
 .drop-bottom li::before {
@@ -391,11 +385,13 @@ footer ul li {
     max-width: 136px;
     }
 
-    .drops {
-        width: 100%;
-        position: absolute;
+    .dropdown-menu[data-bs-popper] {
         top: 58px;
-        left: 0;
+        box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.3)
+    }
+
+    .drop-bottom {
+        border-bottom: none;
     }
 
 }
@@ -408,6 +404,3 @@ footer ul li {
 
 }
 
-.dropdown-menu {
-    width: 100%;
-}
